refactor: removing unnecessary code
